{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 25,
  "lineage": "83f295d0-9adf-cba7-dcf2-9781799c5ce1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cba_tf_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dfe6158087b5c0ac",
            "arn": "arn:aws:ec2:eu-west-2:057880394351:instance/i-01ce9d2c37d6db69d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ce9d2c37d6db69d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cba_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a9fba58a787e47ee",
            "private_dns": "ip-10-0-1-223.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.223",
            "public_dns": "ec2-18-130-48-77.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.48.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2763456d6d3153d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-088215aee43d9cb10"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b381e990b845e9fa",
            "tags": {
              "NAME": "ApacheInstance"
            },
            "tags_all": {
              "NAME": "ApacheInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088215aee43d9cb10"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.cba_tf_sg",
            "aws_subnet.cba_public",
            "aws_vpc.my_vpc",
            "data.aws_ssm_parameter.instance_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cba_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:057880394351:internet-gateway/igw-0bf608fbbb7502dc3",
            "id": "igw-0bf608fbbb7502dc3",
            "owner_id": "057880394351",
            "tags": {
              "Name": "ApacheIGW"
            },
            "tags_all": {
              "Name": "ApacheIGW"
            },
            "vpc_id": "vpc-0f83fe4495fa6abdb"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cba_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:057880394351:route-table/rtb-0ff9670679ec33f40",
            "id": "rtb-0ff9670679ec33f40",
            "owner_id": "057880394351",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf608fbbb7502dc3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ApachePublicRT"
            },
            "tags_all": {
              "Name": "ApachePublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f83fe4495fa6abdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cba_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cba_subnet_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c133a75056489a70",
            "route_table_id": "rtb-0ff9670679ec33f40",
            "subnet_id": "subnet-0b381e990b845e9fa"
          },
          "dependencies": [
            "aws_internet_gateway.cba_igw",
            "aws_route_table.cba_public_rt",
            "aws_subnet.cba_public",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cba_tf_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:057880394351:security-group/sg-088215aee43d9cb10",
            "description": "allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088215aee43d9cb10",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cba_tf_sg",
            "name_prefix": "",
            "owner_id": "057880394351",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "CBAterraformSG"
            },
            "tags_all": {
              "name": "CBAterraformSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f83fe4495fa6abdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cba_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:057880394351:subnet/subnet-0e7ed374c4d11f07c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7ed374c4d11f07c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057880394351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ApachePrivateSubnet"
            },
            "tags_all": {
              "Name": "ApachePrivateSubnet"
            },
            "vpc_id": "vpc-0f83fe4495fa6abdb"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cba_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:057880394351:subnet/subnet-0b381e990b845e9fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b381e990b845e9fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "057880394351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ApachePublicSubnet"
            },
            "tags_all": {
              "Name": "ApachePublicSubnet"
            },
            "vpc_id": "vpc-0f83fe4495fa6abdb"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:057880394351:vpc/vpc-0f83fe4495fa6abdb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07b0e0a81e3e0d5a5",
            "default_route_table_id": "rtb-0d183ac0b24cd17be",
            "default_security_group_id": "sg-0d54c2b947addac79",
            "dhcp_options_id": "dopt-086410222e649604b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f83fe4495fa6abdb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d183ac0b24cd17be",
            "owner_id": "057880394351",
            "tags": {
              "name": "ApacheVPC"
            },
            "tags_all": {
              "name": "ApacheVPC"
            }
          }
        }
      ]
    }
  ]
}